--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <script src="main.js"></script>
 </head>
 <body>
+    <style>
+    img{
+        max-width: 100%;
+        vertical-align: top;
+        
+
+    }
+    
+    </style>
     <img src="img/header.jpg" alt="">
     <img src="img/hero.jpg" alt="">
 </body>S
