--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <img src="img/header.jpg" alt="">
     <img src="img/hero.jpg" alt="">
     <img src="img/acustica.jpg" alt="">
-</body>S
+    <img src="img/clasica.jpg" alt="">
+</body>
 </html>
