--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 <body>
     <style>
+        body{
+            border: 10px solid red;
+        }
     img{
         max-width: 100%;
         vertical-align: top;
