nueva version de invie - verde

--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
     }
     
     </style>
-    <img src="img/header.jpg" alt="">
-    <img src="img/hero.jpg" alt="">
-    <img src="img/acustica.jpg" alt="">
-    <img src="img/clasica.jpg" alt="">
+  
+    <img src="img/nueva-version.jpg" alt="">
 </body>
 </html>
