--- a/index.html
+++ b/index.html
@@ -15,11 +15,21 @@
     img{
         max-width: 100%;
         vertical-align: top;
+    }
 
+
+    img#responsivo{
+       display:none;
+   }
+    @media (max-width:768px){
+   img#responsivo{
+       display:block;
+   }
 
     }
     
     </style>
+    <img src="img/invie-responsive.png" id='responsivo' alt="">
     <img src="img/header.jpg" alt="">
     <img src="img/hero.jpg" alt="">
     <img src="img/acustica.jpg" alt="">
